fix: subpage loco scroll, missing loco bounds bounds fix for async footer, global scrollbar deletion

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1748,4 +1748,15 @@ html.has-scroll-smooth { scrollbar-width: none; }
     height: 44px;
   }
 }
+
+/* === HIDE SCROLLBARS GLOBALLY === */
+::-webkit-scrollbar {
+  display: none;
+}
+* {
+  scrollbar-width: none;
+}
+.c-scrollbar {
+  display: none !important;
+}
 
